--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title>404 Page not found &middot; 桐谣</title>
+  <title>404 Page not found &middot; Dog.2</title>
 
   
-  <link type="text/css" rel="stylesheet" href="https://lizs.github.io/blog/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://lizs.github.io/blog/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://lizs.github.io/blog/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://lizs.github.io/blog/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="http://lizs.github.io/blogcss/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="http://lizs.github.io/blogcss/poole.css">
+  <link type="text/css" rel="stylesheet" href="http://lizs.github.io/blogcss/syntax.css">
+  <link type="text/css" rel="stylesheet" href="http://lizs.github.io/blogcss/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -23,7 +23,7 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  <link href="" rel="alternate" type="application/rss+xml" title="桐谣" />
+  <link href="" rel="alternate" type="application/rss+xml" title="Dog.2" />
 
   
 </head>
@@ -32,24 +32,27 @@
   <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://lizs.github.io/blog/"><h1>桐谣</h1></a>
+      <a href="http://lizs.github.io/blog">
+        <h1>Dog.2</h1>
+      </a>
       <p class="lead">
-      An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.
+        天下大事，必做于细
       </p>
     </div>
 
     <ul class="sidebar-nav">
-      <li><a href="https://lizs.github.io/blog/">Home</a> </li>
+      <li>
+        <a href="http://lizs.github.io/blog">Home</a>
+      </li>
       
     </ul>
 
     <p>&copy; 2018. All rights reserved. </p>
   </div>
 </div>
-
     <div class="content container">
     <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://lizs.github.io/blog/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://lizs.github.io/blog">Head back home</a> to try finding it again.</p>
     </div>
 
     
